Archive2/0e/edadfe61ec53aa/output
main.cpp: In function 'int main()':
main.cpp:15:1: error: expected ',' or ';' before 'while'
 while (!feof(fp))
 ^
main.cpp:14:6: warning: unused variable 'str' [-Wunused-variable]
 char str[1024]="" 
      ^
